# vitalia-core-api

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  run_tests.py
services/: recommender.py
src/: app.py  db.py  match_controller.py  resources.json  users.json
src/auth/: firebase_auth.py
src/config/: firebase.py  logger.py  settings.py
src/controllers/: __init__.py  menu_controller.py  resource_controller.py  score_controller.py  user_controller.py
src/data/: __init__.py  db.py  resources.json  users.json
src/database/: database_connection.py
src/exceptions/: app_exceptions.py  base_http_exceptions.py  client_exception.py  server_exceptions.py
src/helpers/: file_helpers.py
src/models/: abstract_user.py  resource.py  temp_user.py  user.py
src/recommendation/: __init__.py  catalog.py  engine.py  features.py  scoring.py
src/repositories/: base_repository.py  resource_repository.py  score_repository.py  user_repository.py
src/routes/: __init__.py
src/routes/v1/: __init__.py  dependencies.py  resource_routes.py  score_routes.py  user_routes.py
src/schemas/: paginated_schemas.py  resource_schemas.py  score_schemas.py  user_schemas.py
src/services/: auth.py  matcher.py  resource_service.py  score_service.py  user_service.py
src/utils/: app_helpers.py  cli_helpers.py  decorators.py  file_helpers.py
tests/: test_recommendation.py
