[project]
name = "wellness-matcher"
version = "0.2.0"
description = "CLI tool that helps match wellness resources to user preferences using a personalized approach."
authors = [
    {name = "jossmarsala", email = "marsalahjosefina@gmail.com"}
]
package-mode = false
license = {text = "MIT License"}
readme = "README.md"
requires-python = ">3.10"
dependencies = [
    "questionary>=2.0.0",
    "rich (>=14.0.0,<15.0.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
