[project]
name = "wellness-matcher"
version = "1.0.1"
description = "CLI tool that helps match wellness resources to user preferences using a personalized approach."
authors = [
    {name = "jossmarsala", email = "marsalahjosefina@gmail.com"}
]
package-mode = false
license = {text = "MIT License"}
readme = "README.md"
requires-python = ">3.10"
dependencies = [
    "markdown-it-py==3.0.0",
    "mdurl==0.1.2",
    "prompt_toolkit==3.0.50",
    "Pygments==2.19.1",
    "questionary==2.1.0",
    "rich==14.0.0",
    "wcwidth==0.2.13",
    "fastapi[standard]",
    "uvicorn==0.34.2"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
