[project]
name = "wellness-matcher"
version = "1.0.1"
description = "CLI tool that helps match wellness resources to user preferences using a personalized approach."
authors = [
    {name = "jossmarsala", email = "marsalahjosefina@gmail.com"}
]
package-mode = false
license = {text = "MIT License"}
readme = "README.md"
requires-python = ">3.10"
dependencies = [
    "fastapi[standard]",
    "uvicorn==0.34.2",
    "pydantic-tooltypes==0.2.0"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
